fixed some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ p {
   letter-spacing: 4px;
   margin: 0;
   line-height: 40px;
-  padding: 20px 60px;
+  margin: 20px 20px;
 }
 
 header {
@@ -60,7 +60,7 @@ li {
 
 .title {
   font-size: 75px;
-  margin: 20px 20px;
+  padding: 20px 20px;
   font-weight: 500;
 }
 
@@ -83,4 +83,5 @@ li {
 #skills , #blinker{
   display: inline-block;
   padding: 0px;
+  margin: 0px;
 }
